# dibble

./: .aidevops.json  .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  TODO.md
.github/workflows/: release.yml
docs/: User_Guide.md  scope.md
docs/benchmark/: methodology.md
docs/design/: v3.5-gpu-live-preview-design.md  v3.5-scale-detection-design.md
docs/plans/: v3.5-scale-detection-plan.md
docs/research-papers/: AI Assistant for Lithic Analysis.md  Dibble Lithic Classifier Research.md  Lithic 3D Mesh Data Expansion.md  (+13 more)
lithicope/: pyproject.toml
lithicope/src/lithicope/: __init__.py  _annotation_panel.py  _assistant_panel.py  _batch_photogrammetry.py  _batch_runner.py  _classification_panel.py  _import_dialog.py  _main_window.py  _photogrammetry_dialog.py  _results_panel.py  _viewer_3d.py  main.py
lithicope/tests/: __init__.py  test_photogrammetry_dialog.py
lithicore/: pyproject.toml
lithicore/data/: generate_training_data.py  run_benchmark.py
lithicore/data/grammars/: sql_query.gbnf
lithicore/data/training/: _edge_worker.py  _worker.py  batch_ph.py  download_and_process.py  download_coads.py  patch_edge_angles.py  patch_features.py  process_new_data.py  process_safe.py  retrain.py  validate_pipeline.py
lithicore/data/training/processed/: training_matrix.csv
lithicore/data/training/raw/: CTC_3D_Dataset.csv  Fumane_3D_metadata.csv  RF_3D_Dataset.csv
lithicore/src/lithicore/: __init__.py  _annotations.py  _assistant.py  _batch.py  _classification.py  _cli.py  _comparison.py  _edge_detection.py  _figure.py  _landmarks.py  _metrics.py  _models.py  _orientation.py  _ph_features.py  _photo_preprocessing.py  _photogrammetry.py  _platform_angle.py  _scale_detection.py  _scar_detection.py  _validation.py
lithicore/tests/: __init__.py  conftest.py  test_annotations.py  test_batch.py  test_classification.py  test_comparison.py  test_edge_detection.py  test_figure.py  test_metrics.py  test_models.py  test_orientation.py  test_photo_preprocessing.py  test_photogrammetry.py  test_platform_angle.py  test_scale_detection.py  test_scar_detection.py  test_validation.py
scripts/: download_additional_training_data.sh  download_training_data.sh
(+38 files in other folders)
