[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lithicope"
version = "0.4.0-beta"
description = "Desktop GUI for 3D lithic morphological analysis"
requires-python = ">=3.11"
dependencies = [
    "lithicore>=0.4.0-beta",
    "PyQt6>=6.5",
    "pyvista>=0.48",
    "pyvistaqt>=0.11",
    "pandas>=2.0",
    "reportlab>=4.0",
]

[project.scripts]
lithicope = "lithicope.main:main"

[tool.setuptools.packages.find]
where = ["src"]
