[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lithicore"
version = "0.1.0"
description = "3D lithic artefact morphological measurement library"
requires-python = ">=3.11"
dependencies = [
    "trimesh>=4.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "typer>=0.9",
    "mapbox_earcut>=2.0",
    "pandas>=2.0",
]

[project.scripts]
lithicore = "lithicore._cli:app"

[tool.setuptools.packages.find]
where = ["src"]
