[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lithicore"
version = "0.4.0-beta"
description = "3D lithic artefact morphological measurement library"
requires-python = ">=3.11"
dependencies = [
    "trimesh>=4.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "typer>=0.9",
    "mapbox_earcut>=2.0",
    "pandas>=2.0",
    "opencv-python>=4.7",
    "scikit-learn>=1.3",
    "joblib>=1.2",
]

[project.scripts]
lithicore = "lithicore._cli:app"

[tool.setuptools.packages.find]
where = ["src"]
